[gd_scene load_steps=6 format=3 uid="uid://drhd4rqy7o2in"]

[ext_resource type="Script" path="res://edge_component.gd" id="1_5877a"]
[ext_resource type="Script" path="res://player.gd" id="1_fxocp"]
[ext_resource type="PackedScene" uid="uid://bu34kpbmg1nlk" path="res://bullet.tscn" id="2_uemqq"]
[ext_resource type="Texture2D" uid="uid://bw607ayapj0nw" path="res://sprites/ship.png" id="3_e0ol8"]
[ext_resource type="Script" path="res://velocity_component.gd" id="4_mlbe4"]

[node name="Player" type="Area2D"]
scale = Vector2(0.5, 0.5)
collision_mask = 2
script = ExtResource("1_fxocp")
bulletScene = ExtResource("2_uemqq")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_e0ol8")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(28, 0, -24, 16, -24, -16)

[node name="EdgeComponent" type="Node2D" parent="."]
script = ExtResource("1_5877a")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("4_mlbe4")
maxSpeed = 300.0
acceleration = 300.0

[node name="GunPosition" type="Marker2D" parent="."]
position = Vector2(24, 0)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
